stuck on grid issue

--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -52,6 +52,9 @@
 
 }
 
+.card-hide {
+  display: none;
+}
 
 @media only screen and (min-width: 1030px) {
   .react-grid-item {
